--- a/css/style.css
+++ b/css/style.css
@@ -1056,10 +1056,10 @@ body.open-popup-page {
     position: fixed;
     max-width: 700px;
     top: -200%;
-    margin-top: 10px;
+    margin-top: 70px;
     left: 50%;
     transform: translatex(-50%);
-    background-color: #dbdbdb;
+    background-color: #2e2e2e;
     padding: 8px 15px;
     z-index: 999999;
     border-radius: 10px;
@@ -1069,7 +1069,6 @@ body.open-popup-page {
 }
 
 .small-popup.animate-sp {
-    transition: all .2s ease-in;
     top: 0%;
 }
 
@@ -1080,6 +1079,16 @@ body.open-popup-page {
     cursor: pointer;
 }
 
+.small-popup:before {
+    content: "";
+    top: -70px;
+    left: 0px;
+    width: 100%;
+    height: 70px;
+    background: #FFF;
+    position: absolute;
+    background: transparent;
+}
 /* Distributor */
 .distributor-item {
     background-color: #dbdbdb;
@@ -1278,6 +1287,10 @@ body.open-popup-page {
     border: 0;
     border-bottom: 2px solid #EF280E;
     margin: 0 5px;
+}
+
+.zoom-notif label {
+    background: #FFF;
 }
 
 /* Company Info */
